--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
     <script src="js/aos.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
+<!--     <script src="js/jquery.validate.min.js"></script> -->
     <script src="js/main.js"></script>
   </body>
 </html>
